--- a/style.css
+++ b/style.css
@@ -347,9 +347,28 @@ span h2{
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
-  
+  }
+  .sec-4{
+    padding-top: 1rem;
+    margin-left: 1rem;
   }
   
+  footer{
+    background-color: #F8F9FA;
+    width: 100%;
+    font-family: "Open Sans", sans-serif;
+   
+  }
+
+  .footer-3{
+    margin-left: 1rem;
+    padding-top: 1rem;
+  }
+
+  form{
+    padding-top: 2rem;
+    margin-left: 1rem;
+  }
   
 }
 /* Meida ends */
@@ -738,12 +757,19 @@ span h2{
     display: flex;
     justify-content: center;
     background-color: #010110;
-    /* line-height: 3rem; */
-    padding: 3rem;
+    /* padding: 3rem; */
   }
   
 
+form{
+  padding-bottom: 1rem;
+  line-height: 2rem;
+}
 
+form button{
+  margin-left: 1rem;
+  margin-top: 1rem;
+}
 
   form input{
     width: 100%;
@@ -752,22 +778,27 @@ span h2{
   }
   footer{
     background-color: #F8F9FA;
+    width: 100%;
     font-family: "Open Sans", sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    border-bottom: 2rem;
   }
 
   .footer-1{
+    text-align: center;
     display: flex;
     gap: 2rem;
-    /* margin: 1rem; */
     padding-top: 2rem;
     border-bottom: 1px solid #ccc;
-    width: 80%;
-    margin-left: 2rem;
+    width: 70%;
+    margin-left: 20px;
    }
 
   footer p{
     font-family: "Open Sans", sans-serif;
-    font-size: 16px;
+    font-size: 15px;
   }
 .footer-1 .fa-brands{
   font-size: 18px;
@@ -776,13 +807,15 @@ span h2{
 
 .footer-2{
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  align-items: center;
   flex-wrap: wrap;
-  margin-left: 1rem;
-  margin-right: 1rem;
-  line-height: 3rem;
 }
-   
+.secp{
+  margin-left: 1rem;
+  line-height: 2rem;
+}   
+
 .footer-2 a{
 text-decoration: none;
 color: #010110;
@@ -790,16 +823,17 @@ font-family: "Open Sans", sans-serif;
 }
 
 .footer-2 p{
-  font-size: 16px;
+  font-size: 15px;
 }
 
 .footer-3 #p{
   font-family: "Open Sans", sans-serif;
   font-size: 26px;
-  line-height: 3rem;
 }
 
-
+.footer-3{
+  line-height: 2rem;
+}
 form input{
 border: 0;
 outline: none;
@@ -820,6 +854,10 @@ width: 100%;
   display: flex;
   gap: 1rem;
 
+}
+
+.sec-4{
+  margin-left: 1rem;
 }
 
 
