--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ nav {
   justify-content: space-around;
   align-items: center;
   min-height: 8vh;
-  background-color: #1b10bb;
+  background-color: rgb(26,115,232);
   width: 100%;
   padding: 2rem;
   overflow: hidden;
@@ -43,8 +43,10 @@ ul a {
 
 a input {
   width: 5rem;
-  /* height: 2rem; */
+  outline: none;
+  border: 0;
   padding: 4px;
+  border-radius: 3px;
 }
 .nav-links li {
   list-style: none;
@@ -218,7 +220,7 @@ span h2{
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
-    background-color: rgb(9, 16, 148);
+    background-color: rgb(26,115,232);
     background-position: fixed;
     background-size: cover;
     width: 100%;
@@ -239,7 +241,7 @@ span h2{
     height: 26rem;
     top: 10.24vh;
     margin: 1rem;
-    background-color: rgb(9, 16, 148);
+    background-color: rgb(26,115,232);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -381,7 +383,7 @@ span h2{
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
-    background-color: rgb(9, 16, 148);
+    background-color: rgb(26,115,232);
     background-position: fixed;
     background-size: cover;
     width: 100%;
@@ -402,7 +404,7 @@ span h2{
     height: 26rem;
     top: 10.24vh;
     margin: 1rem;
-    background-color: rgb(9, 16, 148);
+    background-color: rgb(26,115,232);
     display: flex;
     flex-direction: column;
     align-items: center;
